[package]
name = "news-sources"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
rss = "2.0.13"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[features]
default = []
