[package]
name = "news-ag"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
atom_syndication = "0.12.8"
chrono = "0.4.44"
quick-xml = "0.39.4"
reqwest = { version = "0.13.3", features = ["blocking", "gzip", "json"] }
rss = "2.0.13"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []
async = []
serde = ["chrono/serde"]
