[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
news-ag = { path = "../" }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
